--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-circle-progress-bar": "^0.1.4",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
